maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:48: error: ':' expected but ')' found.
def pos(j) : Array ={
         ^ShortestPathMaze:83: error: identifier expected but '}' found.
}
^